Bug 94392 - SLIDESHOW: Scrolling in Slides causes crash in basebmp polygon rendering (linux only)
Summary: SLIDESHOW: Scrolling in Slides causes crash in basebmp polygon rendering (lin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.6
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2015-09-21 03:31 UTC by Andy
Modified: 2016-03-15 12:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File that causes the crash (960.00 KB, application/vnd.ms-powerpoint)
2015-09-21 03:31 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2015-09-21 03:31:51 UTC
Created attachment 118887 [details]
File that causes the crash

Scrolling in the Slides view in Impress causes a messagebox to appear: vector::_M_default_append <OK> Clicking OK closes LibreOffice. 

Navigating the file with Page Down also causes the crash.

Attached the file that causes crash. I tried saving it as an ODP but it still crashes.

Version: 5.0.1.2.0+
Build ID: 5.0.1.2 Arch Linux build-1
Locale: en-US (en_US.UTF-8)
Comment 1 raal 2015-09-21 06:11:49 UTC
No crash with LO : 5.0.1.2, win7
Comment 2 steve 2015-09-21 06:49:49 UTC
OSX 10.10.5
LO Version: 5.1.0.0.alpha1+
Build ID: 5aa58e499a1fbd4e54692233d1b7f8c6237ad8e2
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2015-09-09_03:16:30
Locale: de-DE (de.UTF-8)

no repro

→ Linux only
Comment 3 Buovjaga 2015-09-24 06:39:51 UTC
No message or crash.

Kubuntu 15.04 64-bit KDE Plasma 5.4
Version: 5.0.1.2
Build ID: 00m0(Build:2)
Locale: en-US (en_US.UTF-8)
Comment 4 Buovjaga 2015-09-24 08:10:56 UTC
Repro message and crash in Arch Linux 64-bit / Gnome3 / LibO 5.0.1
Comment 5 Armin Le Grand (collabora) 2015-11-06 17:11:09 UTC
Loads fine on Win7 LO 5.1.0.0.alpha1+, scrolled through slides view, rearranged slides, SliseSorter fine, scroll, rearrange, all works well
Comment 6 Buovjaga 2015-11-06 20:48:44 UTC
(In reply to Armin Le Grand from comment #5)
> Loads fine on Win7 LO 5.1.0.0.alpha1+, scrolled through slides view,
> rearranged slides, SliseSorter fine, scroll, rearrange, all works well

It needs Gtk3 to crash. Still repro with:

Ubuntu 15.10 64-bit 
Version: 5.0.2.2
Build ID: 00m0(Build:2)
Locale: en-US (en_US.UTF-8)
Comment 7 Robinson Tryon (qubit) 2015-12-14 05:32:46 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]
Comment 8 Joel Madero 2015-12-20 00:02:30 UTC
Assuming that since it has a bibisectRequest that this is a regression. Setting as such.

Once it's bibisected and confirmed to still exist in master I suggest moving to highest.
Comment 9 Caolán McNamara 2016-03-11 15:48:44 UTC
crashes like this for me in 5-0 series, while its all ok in the 5-1 series
Comment 10 Caolán McNamara 2016-03-11 16:17:00 UTC
This is working in the 5-1 series because the underlying basebmp headless rendering backend code path is avoided. The core is deleted in master, so I propose the following trivial https://gerrit.libreoffice.org/23154 fix to avoid this case in 5.0.6
Comment 11 Commit Notification 2016-03-15 12:38:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93772371096b4caf542146e673a44d8d346a09ab&h=libreoffice-5-0

Resolves: tdf#94392 huge negative Y causes length exception

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.