Resolves: tdf#94392 huge negative Y causes length exception

because this rendering stuff is deleted in later versions
of LibreOffice and replaced with cairo rendering, just bodge
this case to give up and go home.

Change-Id: I4e60184b0919dc719edfe223ebb2d8ef684608e8
Reviewed-on: https://gerrit.libreoffice.org/23154
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit 93772371096b4caf542146e673a44d8d346a09ab)